2001-03-12  Anders Carlsson  <andersca@codefactory.se>

	* tasklist_applet.gnorba: change location_info to point to
	  the process instead of the shlib.

	* tasklist_applet.c: define APPLET_COMPILE_AS_PROCESS and make
	  it actually compile.
	  (tasklist_destroy): "Fix" a warning.

	* Makefile.am: Make the tasklist a process again, since the
	  shlib version currently leaks and is weird.

Mon Mar 12 01:27:24 2001  George Lebl <jirka@5z.com>

	* tasklist_applet.[ch], tasklist_properties.c, tasklist_icon.c:
	  Don't crash on remove from panel, don't redraw tasks when just
	  geometry changed, redraw only when needed, change size when it has
	  actually changed, not depending on random stack data, fix some
	  leaks when removing tasklist but it still leaks quite horribly.
	  Null things when freed to avoid crashes.  Notice icon changes
	  again.  Add sarcastic #warning.

2001-03-09  Jaka Mocnik  <jaka@gnu.org>

	* tasklist/tasklist_applet.c (tasklist_task_get_label): return
	empty string if task name is NULL. this prevents occasional
	segfaults.

2001-03-04 John Fleck <jfleck@inkstain.net>

	* help/C/tasklist.sgml, help/C/tasklist_applet.sgml, plus
	screenshots - add discussion of task grouping to docs, update
	screenshots 

2001-03-02  Anders Carlsson  <andersca@codefactory.se>

	* tasklist_applet.h: Add about box to Tasklist struct.

	* tasklist_applet.c (cb_about): Use tasklist->about_dialog here.
	(tasklist_destroy): Destroy the property and about dialogs.

Sun Feb 25 21:27:25 2001  George Lebl <jirka@5z.com>

	* tasklist_applet.c: Use destroy not unref for menu, since it needs
	  to be actually destroyed in case there was another refcount.  When
	  a task is destroyed, set the "task" data on the menuitem to NULL,
	  and hide it.  (destroying makes thing go nuts a bit)

	* tasklist_menu.c: handle cases where "task" is NULL, and make sure
	  to update ->menuitem on task after the item is destroyed.  Also
	  don't leak the pixmaps
